--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -22,5 +22,6 @@
 @import './colors';
 //@import './slick';
 @import './menu';
-//@import './customs';
+@import './customs';
 //@import './blocks';
+@import './blocks/documents';
