--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -20,7 +20,8 @@
 @import './main';
 @import './links';
 @import './colors';
-//@import './slick';
+@import './slick';
+@import './breads';
 @import './menu';
-//@import './customs';
-//@import './blocks';
+@import './customs';
+@import './blocks';
