--- a/src/scss/blocks.scss
+++ b/src/scss/blocks.scss
@@ -1,7 +1,8 @@
-@import './blocks/consult';
-@import './blocks/productions';
+//@import './blocks/consult';
+//@import './blocks/productions';
 @import './blocks/news';
-@import './blocks/corp';
-@import './blocks/form';
+@import './blocks/services';
+//@import './blocks/corp';
+//@import './blocks/form';
 @import './blocks/photo';
-@import './blocks/contacts';
+//@import './blocks/contacts';
