--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,3 +1,11 @@
 .font-black {
   color: $black;
 }
+
+.bg-blue {
+  background: #ECF4FF;
+}
+
+.border-grey {
+  border: 1px solid rgba(232, 227, 243, 0.5);
+}
