--- a/src/scss/customs.scss
+++ b/src/scss/customs.scss
@@ -1,6 +1,7 @@
-@import './custom/modal';
-@import './custom/close';
-@import './custom/form';
+//@import './custom/modal';
+//@import './custom/close';
+//@import './custom/form';
 @import './custom/fancybox';
-@import './custom/scroll';
-@import './custom/blazy';
+//@import './custom/scroll';
+//@import './custom/blazy';
+@import './custom/pagination';
