--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,11 @@ a {
   }
 }
 
+.container-custom {
+  width: 90%;
+  margin: auto;
+}
+
 .block-row {
   background-size: cover;
   background-repeat: no-repeat;
@@ -41,17 +46,6 @@ h3 {
   letter-spacing: 0.03em;
   color: $cDark;
   margin-bottom: $f64px;
-}
-
-.btn-green {
-  font-style: normal;
-  font-weight: normal;
-  font-size: $f12px;
-  line-height: $f18px;
-  letter-spacing: 0.01em;
-  text-decoration-line: underline;
-  text-transform: uppercase;
-  color: $green;
 }
 
 .mb-25 {
@@ -83,9 +77,7 @@ footer {
   flex: 0 0 auto;
 }
 
-.bg-dark{
-  background: $bg;
-}
+
 
 .br-10  {
   border-radius: 10px;
@@ -113,11 +105,12 @@ footer {
 }
 
 
-
-
-header, .footer {
+header {
   padding-top: $f12px;
   padding-bottom: $f12px;
+}
+
+header, footer {
   font-size: $f16px;
 
   p {
@@ -139,8 +132,11 @@ header, .footer {
     div {
       padding: 0;
       padding-right: $f10px;
-      &:nth-of-type(1){
+      &:nth-of-type(1) {
         padding-left: $f15px;
+      }
+      &:last-of-type {
+        padding-right: $f15px;
       }
     }
   }
@@ -190,12 +186,41 @@ header, .footer {
   }
 }
 
-
-.color-white {
-  color: $white!important;
+.breads {
+  padding-top: $f100px;
 }
-.font-white > * {
-  color: $white!important;
+.content-body {
+  padding-bottom: $f100px;
+}
+
+h1 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: $f35px;
+  line-height: $f47px;
+  text-transform: uppercase;
+  color: #232323;
+  margin-bottom: $f60px;
+}
+
+h5 {
+  font-weight: bold;
+  font-size: $f16px;
+  line-height: $f19px;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.bg-none {
+  background: none;
+}
+
+.border-none {
+  border: 0;
+}
+.card {
+  box-shadow: 0px 2px 10px rgba(232, 227, 243, 0.5);
 }
 
 @media (max-width: 1430px) {
@@ -236,6 +261,12 @@ header, .footer {
       font-size: $f16px;
       line-height: $f19px;
       letter-spacing: 0.01em;
+    }
+  }
+  footer {
+    font-size: $f12px!important;
+    a {
+      font-size: $f12px!important;
     }
   }
 
