finish local dev

--- a/src/scss/blocks.scss
+++ b/src/scss/blocks.scss
@@ -1,8 +1,9 @@
-//@import './blocks/consult';
-//@import './blocks/productions';
+@import './blocks/consult';
+@import './blocks/doctor';
 @import './blocks/news';
 @import './blocks/services';
-//@import './blocks/corp';
+@import './blocks/certs';
 //@import './blocks/form';
 @import './blocks/photo';
-//@import './blocks/contacts';
+@import './blocks/advantage';
+@import './blocks/reviews';
