--- a/src/scss/blocks/news.scss
+++ b/src/scss/blocks/news.scss
@@ -7,5 +7,9 @@
     display: block;
     height: $f40px;
     overflow: hidden;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: $f19px;
+    font-size: $f16px;
   }
 }
